# defi-defender

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
graders/: __init__.py  grader.py
server/: __init__.py  app.py  environment.py  requirements.txt
simulation/: __init__.py  market.py  protocol.py  scenarios.py
